--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,16 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.App img{
+height: 30px;
+width: 30px;
+margin-right: 10px;
+
+}
+.App button{
+  padding-bottom: 10px;
+  width: 150px;
+}
+.App input{
+  width: 20%;
+}
